[fix] 전체적인 타입 오류 해결