@@ -6,16 +6,16 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 public class WinningLotto {
-    private final List<LottoNumber> winningNumbers;
-    private final LottoNumber bonusNumber;
+    private final List<Integer> winningNumbers;
+    private final int bonusNumber;
 
-    public WinningLotto(List<LottoNumber> winningNumbers, LottoNumber bonusNumber) {
+    public WinningLotto(List<Integer> winningNumbers, int bonusNumber) {
         validate(winningNumbers, bonusNumber);
-        this.winningNumbers = winningNumbers.stream().sorted().collect(Collectors.toList());
+        this.winningNumbers = winningNumbers.stream().sorted().toList();
         this.bonusNumber = bonusNumber;
     }
 
-    private void validate(List<LottoNumber> winningNumbers, LottoNumber bonusNumber) {
+    private void validate(List<Integer> winningNumbers, int bonusNumber) {
         if (winningNumbers.size() != 6) {
             throw new IllegalArgumentException("[ERROR] 당첨 번호는 6개여야 합니다.");
         }
@@ -25,17 +25,20 @@ public class WinningLotto {
         if (winningNumbers.contains(bonusNumber)) {
             throw new IllegalArgumentException("[ERROR] 보너스 번호는 당첨 번호와 중복될 수 없습니다.");
         }
+        if (bonusNumber < 1 || bonusNumber > 45) {
+            throw new IllegalArgumentException("[ERROR] 보너스 번호는 1부터 45 사이의 숫자여야 합니다.");
+        }
     }
 
-    public List<LottoNumber> getWinningNumbers() {
+    public List<Integer> getWinningNumbers() {
         return winningNumbers;
     }
 
-    public LottoNumber getBonusNumber() {
+    public int getBonusNumber() {
         return bonusNumber;
     }
 
-    public boolean contains(LottoNumber number) {
+    public boolean contains(int number) {
         return winningNumbers.contains(number);
     }
 }
